WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157412
Don't use invalidated ResourceLoadStatistics iterators
https://bugs.webkit.org/show_bug.cgi?id=157412
Summary
Don't use invalidated ResourceLoadStatistics iterators
Brent Fulgham
Reported
2016-05-05 20:54:05 PDT
We were using references bound to the return value of iterators from the ResourceLoadStatistics HashMap. When new entries were added, these iterators were invalidated causing the references to refer to invalid memory.
Attachments
Patch
(3.43 KB, patch)
2016-05-05 21:07 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch
(3.44 KB, patch)
2016-05-05 21:13 PDT
,
Brent Fulgham
cdumez
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-05-05 20:54:58 PDT
<
rdar://problem/26133153
>
Brent Fulgham
Comment 2
2016-05-05 21:07:40 PDT
Created
attachment 278231
[details]
Patch
Brent Fulgham
Comment 3
2016-05-05 21:13:04 PDT
Created
attachment 278232
[details]
Patch
Chris Dumez
Comment 4
2016-05-06 08:43:57 PDT
Comment on
attachment 278232
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=278232&action=review
r=me
> Source/WebCore/loader/ResourceLoadStatisticsStore.cpp:71 > + m_resourceStatisticsMap.set(primaryDomain, statistics);
WTFMove(statistics) ?
Brent Fulgham
Comment 5
2016-05-06 08:52:27 PDT
Committed
r200511
: <
http://trac.webkit.org/changeset/200511
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug